--- a/src/pages/houses/houses.html
+++ b/src/pages/houses/houses.html
@@ -10,11 +10,17 @@
   <div *ngIf="isInit" class="housesContent">
     <h2>COucou</h2>
     <div *ngFor="let house of houses">
-      <button ion-button full color="light">{{ house.name }}</button>
+      <button ion-button full color="light" (click)="loadPageHouse(house)">{{ house.name }}</button>
     </div>
     <div class="housesBottom">
-      <button ion-button full color="danger" (click)="previousPage()" [disabled]="apiPageNum == 1">Previous</button>
-      <button ion-button full color="danger" (click)="nextPage()">Next</button>
+      <button ion-button icon-left color="danger" (click)="previousPage()" [disabled]="apiPageNum == 1">
+        <ion-icon name="ios-arrow-back"></ion-icon>
+        Previous
+      </button>
+      <button ion-button icon-right color="danger" (click)="nextPage()">
+        Next
+        <ion-icon name="ios-arrow-forward"></ion-icon>
+      </button>
     </div>
   </div>
 </ion-content>
